--- a/assignments/css/styles.css
+++ b/assignments/css/styles.css
@@ -2,17 +2,40 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Mono:ital,wght@1,500&display=swap');
 
-
+*{
+    font-family: "Playfair Display", serif;
+    box-sizing: border-box;
+}
 
 
 body {
     background-color: #fff;
     font-family: "Playfair Display", serif;
+    background-image: url("../image/beige-tiles.webp");
 }
 
 .container {
-    width: 960px;
+    background-color: white;
+    display: grid; 
+    grid-gap: 1.5em; 
+    grid-template-columns: repeat(12, 1fr);
+    width: min(95%, 75em);
     margin: 0 auto;
+    padding: 0 20px;
+}
+
+.container > * {
+grid-column: span 12;
+}
+
+
+@media screen and (min-width: 40em) {
+.col-span-8{
+    grid-column: span 8;
+}
+.col-span-4{
+    grid-column: span 4;
+}
 }
 
 header {
@@ -24,7 +47,7 @@ header {
 
 h1 {
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: clamp(32px, 4w, 48px);
 }
 
 h2 {
@@ -35,10 +58,21 @@ h2 {
         font-size: 24px;
         }
 
+
 aside img {
     width: 180px;
     aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 999px;
     border: 6px solid #c76969;
+}
+
+
+#nav-menu li a {
+    color: blue;
+}
+
+.menu-items li a {
+    color: black;
+    font-weight: bold;
 }
